--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -1,15 +1,16 @@
 <h3>Forecast for {{ city }}</h3>
 
-<div ng-repeat="w in weatherResult.list">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="pannel-title">{{ w.dt}}</h3>
-                </div>
-                <div class="panel-body">
-                    Temperature: {{ w.main.temp}}
-                </div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="pannel-title">{{ convertToDate(weatherResult.dt) | date: 'MMM d, y' }}</h3>
+            </div>
+            <div class="panel-body">
+                Condition: {{ weatherResult.weather[0].main }}
+            </div>
+            <div class="panel-body">
+                Temperature: {{ convertToCelcius(weatherResult.main.temp) }} C
             </div>
         </div>
     </div>
